Prevent headline feed icon overlap with the headline

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -9,7 +9,7 @@ body {
 header {
   width: 100%;
   max-width: 1000px;
-  margin: 20px auto;
+  margin: 20px auto 0px;
   font-size: 13px;
 }
 
@@ -53,10 +53,7 @@ header {
 ul.sitenav {
   list-style-type: none;
   padding-left: 0px;
-}
-
-ul.sitenav {
-  display: inline;
+  display: block;
 }
 
 ul.sitenav li {
@@ -94,7 +91,31 @@ ul.sitenav li sup {
 
 .headline-wrapper {
   margin-top: 20px;
-  position: relative;
+  text-align: justify;
+}
+
+.headline-wrapper:after{
+    content: '';
+    display: inline-block;
+    width: 100%;
+    height: 0;
+    font-size:0;
+    line-height:0;
+}
+
+.blog-title {
+  width: 90%;
+  width: calc(100% - 24px);
+}
+
+.blog-title, .blog-feed {
+  display: inline-block;
+  vertical-align: baseline;
+  text-align: left;
+}
+
+.blog-feed a {
+  border-bottom-style: none;
 }
 
 .img-middle {
@@ -327,9 +348,8 @@ footer, footer h3 {
   }
 }
 
-@media screen and (max-width: 350px) {
+@media screen and (max-width: 375px) {
   ul.sitenav {
-    display: block;
     text-align: center;
     line-height: 3;
   }
